# guardian-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  README_old.md  build_new_guardian.sh  build_prod_multiarch.sh  customization_and_development.md  dev-node.Dockerfile  docker-compose.yml  example.env  package-lock.json  running_a_guardian_node.md  troubleshooting.md
backend/node/: Cargo.toml
backend/node/src/: command.rs  credentials.rs  eject.rs  encryption.rs  ghost_shares.rs  key_info.rs  lib.rs  logging.rs  main.rs  node.rs
backend/node/src/communication/: nats.rs  round_subscriptions.rs
backend/node/src/config/: gridlock.rs  mobile.rs
backend/node/src/keygen/: key_import.rs  mod.rs  sr25519.rs
backend/node/src/keygen/ecdsa/: client.rs  mod.rs  orchestrate.rs  session.rs
backend/node/src/keygen/eddsa/: client.rs  orchestrate.rs  session.rs
backend/node/src/recovery/: calculator.rs  commands.rs  encryption.rs  helper_role.rs  orchestrate.rs  recovery_session.rs  target_role.rs
backend/node/src/signing/: mod.rs  sr25519.rs  sr25519_musign.rs
backend/node/src/signing/ecdsa/: orchestrate.rs  session.rs
backend/node/src/signing/eddsa/: session.rs
backend/node/src/storage/: fs.rs  key_store.rs  keyshare_access.rs  keyshare_index_info.rs  mod.rs  wrappers.rs
backend/node/src/user_recovery/: confirm.rs  mod.rs  session.rs
backend/server-node/: Cargo.toml
backend/server-node/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: key_info.rs  recovery.rs
