[workspace]
members = ["backend/node", "backend/server-node", "backend/shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.34"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
cfg-if = "1.0.0"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
derive_more = "0.99.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
dotenv = "0.15.0"

[patch.crates-io.curv-kzen]
branch = "patch-0.9.0"
git = "https://github.com/GridlockNetwork/curv"

[patch."https://github.com/ZenGo-X/multi-party-eddsa".multi-party-eddsa]
branch = "patch-0.3.0"
git = "https://github.com/GridlockNetwork/multi-party-eddsa"
