[package]
authors = ["Gridlock Devs <devs@gridlock.network>"]
build = "build.rs"
edition = "2021"
name = "node"
version = "1.1.3"
license = "GPL-3.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.9.4"
base32 = "0.4"
base64 = "0.13.0"
bulletproof-kzen = "=1.2.0" # NOTE: version higher than 1.2.0 has dependencies conflict
chrono = { version = "0.4", features = ["serde"] }
curv = { package = "curv-kzen", version = "0.9.0", default-features = false, features = [
    "rust-gmp-kzen",
] }
curve25519-dalek = "3.1.0"
ed25519-dalek = "1.0.1"
glob = "0.3.0"
hex = "0.4.3"
hmac = "0.11.0"
itertools = "0.10.3"
libsecp256k1 = "0.7.0"
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", default-features = false, version = "0.8.1" }
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa", version = "0.3.0" }
nats = "0.24.0"
nkeys = "0.1.0"
paillier = { package = "kzen-paillier", version = "0.4.2" }
rand = "0.8.4"
regex = "1.5.5"
rust-argon2 = "0.8.2"
schnorrkel = "0.9"
secp256k1 = "0.20.3"
sha2 = "0.9"
shared = { path = "../shared" }
sodiumoxide = "0.2"
strum = "0.22.0"
strum_macros = "0.23.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
zk-paillier = { version = "0.4.3" }
dotenv = "0.15.0"

# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
uuid.workspace = true
derive_more.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
