[package]
name = "server-node"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "guardian-node"
path = "src/main.rs"

[dependencies]
nats = "0.24.0"
node = { path = "../node" }
signal-hook = "0.2.3"

# Workspace dependencies
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
